--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 language: python
 install:
   - pip install -r requirements.txt --use-mirrors
-  - python setup.py build_ext --inplace
+  - cython termformat.pyx
 script:
   - nosetests
