--- a/.travis.yml
+++ b/.travis.yml
@@ -2,5 +2,6 @@ language: python
 install:
   - pip install -r requirements.txt --use-mirrors
   - cython termformat.pyx
+  - python setup.py build_ext --inplace
 script:
   - nosetests
