--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,7 @@
 language: python
 install:
   - pip install -r requirements.txt --use-mirrors
+before_script:
   - cython termformat.pyx
   - python setup.py build_ext --inplace
 script:
