--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ python:
   - "3.5"
   - "pypy"
 install:
-  - pip install -r requirements.txt --use-mirrors
+  - pip install -r requirements.txt
 before_script:
   - cython termformat.pyx
   - python setup.py build_ext --inplace
